fix findbugs issues
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@17404 7fc7bbf3-cf45-46d4-be06-341739edd864