@@ -16,24 +16,25 @@ import com.tc.util.sequence.BatchSequenceReceiver;
 public class GlobalTransactionIDBatchRequestHandlerTest extends TCTestCase {
 
   private GlobalTransactionIDBatchRequestHandler provider;
-  private TestBatchSequenceReceiver receiver;
-  private TestMutableSequence persistentSequence;
-  private TestSink requestBatchSink;
+  private TestBatchSequenceReceiver              receiver;
+  private TestMutableSequence                    persistentSequence;
+  private TestSink                               requestBatchSink;
 
+  @Override
   public void setUp() throws Exception {
     persistentSequence = new TestMutableSequence();
     requestBatchSink = new TestSink();
 
     provider = new GlobalTransactionIDBatchRequestHandler(persistentSequence);
     provider.setRequestBatchSink(requestBatchSink);
-    
+
     TestServerConfigurationContext scc = new TestServerConfigurationContext();
     scc.l2Coordinator = new L2HADisabledCooridinator();
     provider.initializeContext(scc);
 
     receiver = new TestBatchSequenceReceiver();
   }
-  
+
   public void testx() throws Exception {
     int batchSize = 5;
     // make sure that the request context gets put in the sink properly.
@@ -49,12 +50,12 @@ public class GlobalTransactionIDBatchRequestHandlerTest extends TCTestCase {
 
     // make sure it called the right thing on the sequence
     Object[] args = (Object[]) persistentSequence.nextBatchQueue.poll(1);
-    assertEquals(new Integer(batchSize), args[0]);
+    assertEquals(Integer.valueOf(batchSize), args[0]);
 
     // make sure it called back on the receiver
     args = (Object[]) receiver.nextBatchQueue.poll(1);
-    assertEquals(new Long(persistentSequence.sequence - batchSize), args[0]);
-    assertEquals(new Long(persistentSequence.sequence), args[1]);
+    assertEquals(Long.valueOf(persistentSequence.sequence - batchSize), args[0]);
+    assertEquals(Long.valueOf(persistentSequence.sequence), args[1]);
   }
 
   private static final class TestBatchSequenceReceiver implements BatchSequenceReceiver {
@@ -62,7 +63,7 @@ public class GlobalTransactionIDBatchRequestHandlerTest extends TCTestCase {
     public final NoExceptionLinkedQueue nextBatchQueue = new NoExceptionLinkedQueue();
 
     public void setNextBatch(long start, long end) {
-      nextBatchQueue.put(new Object[] { new Long(start), new Long(end) });
+      nextBatchQueue.put(new Object[] { Long.valueOf(start), Long.valueOf(end) });
     }
 
     public boolean isBatchRequestPending() {
