@@ -1,5 +1,6 @@
 /*
- * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright notice.  All rights reserved.
+ * All content copyright (c) 2003-2008 Terracotta, Inc., except as may otherwise be noted in a separate copyright
+ * notice. All rights reserved.
  */
 package com.tc.statistics.retrieval.actions;
 
@@ -27,10 +28,10 @@ public class SRAL1ReferenceCountTest extends TestCase {
     assertNotNull(data1);
     assertEquals(0, data1.length);
 
-    byte[] b1 = new byte[] { 34, 55, 2 , (byte) 255, 0 };
-    byte[] b2 = new byte[] { 34, 55, 2 , (byte) 255, 0, 4 };
-    byte[] b3 = new byte[] { 43, 5, 127 , (byte) 255, -87, 9 };
-    byte[] b4 = new byte[] { 4};
+    byte[] b1 = new byte[] { 34, 55, 2, (byte) 255, 0 };
+    byte[] b2 = new byte[] { 34, 55, 2, (byte) 255, 0, 4 };
+    byte[] b3 = new byte[] { 43, 5, 127, (byte) 255, -87, 9 };
+    byte[] b4 = new byte[] { 4 };
 
     NodeID n1 = new ServerID("node1", b1);
     NodeID n2 = new ServerID("node2", b2);
@@ -59,7 +60,7 @@ public class SRAL1ReferenceCountTest extends TestCase {
     StatisticData[] data2 = sra.retrieveStatisticData();
     assertNotNull(data2);
     assertEquals(4, data2.length);
-    boolean[] nodes_with_data = new boolean[] {false, false, false, false};
+    boolean[] nodes_with_data = new boolean[] { false, false, false, false };
     for (StatisticData data : data2) {
       assertEquals(SRAL1ReferenceCount.ACTION_NAME, data.getName());
       if (n1.toString().equals(data.getElement())) {
@@ -73,7 +74,7 @@ public class SRAL1ReferenceCountTest extends TestCase {
         assertEquals(new Long(1), data.getData());
       } else if (n4.toString().equals(data.getElement())) {
         nodes_with_data[3] = true;
-        assertEquals(new Long(0), data.getData());
+        assertEquals(Long.valueOf(0), data.getData());
       }
     }
 
